# newclient

./: .gitmodules  CMakeLists.txt  README.md  client.cpp  client.h  main.cpp
cmake/: FindgrSim.cmake  Findssl-vision.cmake
lib/rf/: csuRobocup_radioDef.h  nRF24L01P.cpp  nRF24L01P.h  roboTest.cpp  stream.cpp  stream.h
newclient/.kdev4/: newclient.kdev4
src/: PID.h  client.h  communication.cpp  communication.h  field.cpp  field.h  main.cpp  robot.h  vision.cpp  vision.h
ssl-vision/: robocup-ssl-cam-0-lut-yuv.xml  robocup-ssl.xml
